--- a/client/src/sass/base/_base.scss
+++ b/client/src/sass/base/_base.scss
@@ -8,18 +8,8 @@
 }
 
 .container {
-	position: relative;
+	background: rgba(220, 220, 208, 0.8);
+	width: 100%;
+	min-height: 100vh;
 	overflow: hidden;
-	&::after {
-		content: "";
-		background: rgba(220, 220, 208, 0.8);
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		z-index: 0;
-	}
 }
