bare bones finished

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -2,7 +2,9 @@
 
 @import "base/base";
 
+@import "pages/home";
 @import "pages/upload";
 
 @import "components/navigation";
 @import "components/drop-file";
+@import "components/progressbar";
