--- a/client/src/sass/components/_drop-file.scss
+++ b/client/src/sass/components/_drop-file.scss
@@ -1,8 +1,8 @@
 .main-container {
 	.drop-file-container {
 		position: relative;
-		width: 400px;
-		height: 200px;
+		width: 50vw;
+		height: 50vh;
 		border: 3px dashed $dustyRose;
 		border-radius: 20px;
 
@@ -39,21 +39,6 @@
 				width: 6.25rem;
 			}
 		}
-	}
-
-	.btn {
-		background-color: $dustyRose;
-		border-radius: 1rem;
-		border: none;
-		color: $coolGray;
-		padding: 16px 32px;
-		text-align: center;
-		text-decoration: none;
-		display: inline-block;
-		font-size: 16px;
-		margin: 4px 2px;
-		transition-duration: 0.4s;
-		cursor: pointer;
 	}
 
 	.file-preview {
@@ -107,6 +92,27 @@
 					opacity: 1;
 				}
 			}
+		}
+	}
+
+	.btn-progress-container {
+		display: flex;
+		flex-direction: row;
+
+		.btn {
+			margin-right: 5rem;
+			background-color: $dustyRose;
+			border-radius: 1rem;
+			border: none;
+			color: $coolGray;
+			padding: 16px 32px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+			font-size: 16px;
+			margin: 4px 2px;
+			transition-duration: 0.4s;
+			cursor: pointer;
 		}
 	}
 }
